@startuml
title System Monitoring Agent — Simplified Class Diagram

top to bottom direction

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

namespace monitoring {

    class Metric <<struct>> {
        + mTime: std::chrono::system_clock::time_point
        + mProcessName: std::string
        + mWindowTitle: std::string
        + mUserActive: bool
    }

    class WindowsActivityProvider {
        + GetProcessName() const: std::string
        + GetWindowTitle() const: std::string
        + WasUserActive(interval: std::chrono::seconds) const: bool
    }

    class MetricBuffer {
        {static} - kMaxBufferSize: std::size_t = 100
        - mQueue: std::deque<Metric>
        - mMutex: std::mutex
        - mChanged: std::condition_variable
        --
        + Push(metric: const Metric&): void
        + WaitForData(
            threshold: std::size_t,
            timeout: std::chrono::seconds,
            stopRequested: const std::atomic_bool&
          ): bool
        + TakeBatch(maxCount: std::size_t): std::vector<Metric>
        + RestoreFront(metrics: std::vector<Metric>&&): void
        + GetAll(): std::vector<Metric>
        + NotifyAll(): void
        + Size(): std::size_t
        - TrimToCapacity(): void
    }

    class JsonSerializer {
        + Serialize(
            agentId: const std::string&,
            metrics: const std::vector<Metric>&
          ) const: std::string
    }

    class HttpClient {
        {static} - kTimeout: std::chrono::seconds = 5s
        --
        + PostJson(
            endpoint: const std::string&,
            jsonBody: const std::string&
          ) const: bool
    }

    class Agent {
        {static} - kCollectionInterval: std::chrono::seconds = 5s
        {static} - kSendInterval: std::chrono::seconds = 30s
        {static} - kBatchSize: std::size_t = 10
        - mActivityProvider: WindowsActivityProvider
        - mBuffer: MetricBuffer
        - mJsonSerializer: JsonSerializer
        - mHttpClient: HttpClient
        - mCollectorThread: std::thread
        - mSenderThread: std::thread
        - mStopRequested: std::atomic_bool
        - mStopMutex: std::mutex
        - mStopCondition: std::condition_variable
        - mAgentId: std::string
        - mEndpoint: std::string
        --
        + Agent(endpoint: std::string)
        + Start(): void
        + RequestStop(): void
        + Stop(): void
        --
        - CollectorLoop(): void
        - SenderLoop(): void
        - CollectMetric() const: Metric
        - SaveBackup(): void
    }
}

Agent *-- WindowsActivityProvider
Agent *-- MetricBuffer
Agent *-- JsonSerializer
Agent *-- HttpClient

MetricBuffer "1" o-- "0..100" Metric
JsonSerializer ..> Metric : serializes

note right of WindowsActivityProvider
Работа с Win32 API:
- активное окно
- имя процесса
- заголовок окна
- последняя активность пользователя
end note

note right of MetricBuffer
Потокобезопасный буфер.
При превышении 100 записей
удаляется самая старая.
end note

note right of JsonSerializer
Сериализация данных через nlohmann/json.

Преобразует agent_id и набор Metric
в готовую JSON-строку для отправки
или сохранения в backup.json.
end note

note right of HttpClient
Сетевое взаимодействие через cpp-httplib.

POST с Content-Type: application/json.
Таймаут: 5 секунд.
HTTP 2xx считается успехом.
Endpoint может содержать путь:
http://host:8080/metrics
end note

note right of Agent
Два рабочих потока:

CollectorLoop()
- каждые 5 секунд
- получает данные
- кладёт Metric в буфер

SenderLoop()
- отправка при 10 записях
  или каждые 30 секунд
- получает пачку из буфера
- вызывает JsonSerializer
- передаёт готовый JSON в HttpClient
- при ошибке возвращает
  записи в буфер
end note

note bottom of Agent
main.cpp:
- создаёт Agent
- запускает Agent::Start()
- обрабатывает Ctrl+C / сигнал остановки
- вызывает Agent::Stop()
- оставшиеся данные сохраняются в backup.json
end note

@enduml
